--- a/admin_panel/templates/failed.html
+++ b/admin_panel/templates/failed.html
@@ -1,21 +1,7 @@
 {% load static %}
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <!--
-        ===
-        This comment should NOT be removed.
-
-        Charisma v2.0.0
-
-        Copyright 2012-2014 Muhammad Usman
-        Licensed under the Apache License v2.0
-        http://www.apache.org/licenses/LICENSE-2.0
-
-        http://usman.it
-        http://twitter.com/halalit_usman
-        ===
-    -->
     <meta charset="utf-8">
     <title>
         EasyBot
@@ -50,54 +36,60 @@
 
     <!-- The fav icon -->
     <link rel="shortcut icon" href="{% static 'adminpanel/img/favicon.ico' %}">
-
+  <style>
+        @font-face {
+        font-family: "Iranian Sans";
+        src: url({% static 'adminpanel/fonts/iraniansans.ttf' %});
+        }
+        body{
+        font-family: "Iranian Sans";
+        }
+        h2, h5{
+        font-family: "Iranian Sans";
+        }
+    </style>
 </head>
 
 <body>
-    <!-- topbar starts -->
-    <div class="navbar navbar-default" role="navigation">
+<div class="navbar navbar-default" role="navigation">
 
-        <div class="navbar-inner">
-            <button type="button" class="navbar-toggle pull-left animated flip">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+    <div class="navbar-inner">
+        <a style="font-family: 'Iranian Sans'" class="navbar-brand" href="index.html">بات گرام</a>
+
+        <div class="btn-group pull-right" role="group">
+            <button type="button" class="btn btn-default"><a href="codes.html"> کد تخفیف</a></button>
+            <button type="button" class="btn btn-default"><a href="advertise.html"> تبلیغات</a></button>
+            <button type="button" class="btn btn-default"><a href="show_survey.html"> نظرسنجی</a></button>
+            <button type="button" class="btn btn-default"><a href="orders.html">سفارشات</a></button>
+            <button type="button" class="btn btn-default"><a href="comments.html"> نظرات</a></button>
+            <button type="button" class="btn btn-default"><a href="category.html"> دسته بندی ها</a></button>
+            <button type="button" class="btn btn-default"><a href="enteghadat.html"> انتقادات پیشنهادات</a></button>
+            <button type="button" class="btn btn-default"><a href="showing.html"> مشاهده کردن</a></button>
+
+            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                افزودن
             </button>
-            <a class="navbar-brand" href="index.html"> <img alt="logo" src="{% static 'adminpanel/img/logo20.png' %}" class="hidden-xs"/>
-                <span>EasyBot</span></a>
 
-            <!-- user dropdown starts -->
-            <!-- navbar buttons starts -->
-            <div class="btn-group pull-right" role="group">
-                <button type="button" class="btn btn-default"> سفارشات</button>
-                <button type="button" class="btn btn-default"><a href="comments.html">  نظرات</a></button>
-                <button type="button" class="btn btn-default"><a href="category.html">  دسته بندی ها</a></button>
-                <button type="button" class="btn btn-default"><a href="enteghadat.html">  انتقادات پیشنهادات</a></button>
-                <button type="button" class="btn btn-default" ><a href="showing.html">  مشاهده کردن</a></button>
-                <button type="button" class="btn btn-primary"><a href="adding.html"> افزودن </a></button>
-                <button type="button" class="btn btn-default"> صفحه اصلی</button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
+                <li class="dropdown-item" href="adding.html" style="padding-left: 30%"><a href="adding.html">افزودن محصول</a></li>
+                <li class="dropdown-item" href="add_cat.html" style="padding-left: 20%"><a href="add_cat.html">افزودن دسته بندی</a></li>
+                <li class="dropdown-item" href="add_feed_cat" style="padding-left:45%"><a href="add_feed_cat.html">افزودن نظر</a></li>
+                <li class="dropdown-item" href="survey.html" style="padding-left:24%"><a href="survey.html">افزودن نظرسنجی</a></li>
+                <li class="dropdown-item" href="add_ad.html" style="padding-left:30%"><a href="add_ad.html">افزودن تبلیغات</a></li>
+                <li class="dropdown-item" href="add_code.html" style="padding-left:22%"><a href="add_code.html">افزودن کد تخفیف</a></li>
+
+
+                </ul>
+
+
             </div>
 
-            <!-- user dropdown ends -->
-
-            <!-- theme selector starts -->
-
-            <!-- theme selector ends -->
-
-            <ul class="collapse navbar-collapse nav navbar-nav  top-menu">
-
-
-                <li>
-                    <form class="navbar-search pull-left">
-                        <input style="text-align: right" placeholder="جستجو" class="search-query form-control col-md-10" name="query"
-                               type="text">
-                    </form>
-                </li>
-            </ul>
 
         </div>
     </div>
+
+
     <!-- topbar ends -->
 
 
@@ -234,45 +226,9 @@
 <!-- external javascript --><!-- Latest compiled and minified CSS -->
 
 
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
-
-<!-- (Optional) Latest compiled and minified JavaScript translation files -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
-
-
 <script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
-
-
-<!-- calender plugin -->
-<script src="{% static 'adminpanel/bower_components/moment/min/moment.min.js' %}"></script>
-<script src="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.min.js' %}"></script>
-<!-- data table plugin -->
-<script src="{% static 'adminpanel/js/jquery.dataTables.min.js' %}"></script>
-
-<!-- select or dropdown enhancer -->
-<script src="{% static 'adminpanel/bower_components/chosen/chosen.jquery.min.js' %}"></script>
-<!-- plugin for gallery image view -->
-<script src="{% static 'adminpanel/bower_components/colorbox/jquery.colorbox-min.js' %}"></script>
-<!-- notification plugin -->
-<script src="{% static 'adminpanel/js/jquery.noty.js' %}"></script>
-<!-- library for making tables responsive -->
-<script src="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.js'%}"></script>
-<!-- tour plugin -->
-<script src="{% static 'adminpanel/bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js' %}"></script>
-<!-- star rating plugin -->
-<script src="{% static 'adminpanel/js/jquery.raty.min.js' %}"></script>
-<!-- for iOS style toggle switch -->
-<script src="{% static 'adminpanel/js/jquery.iphone.toggle.js' %}"></script>
-<!-- autogrowing textarea plugin -->
-<script src="{% static 'adminpanel/js/jquery.autogrow-textarea.js' %}"></script>
-<!-- multiple file upload plugin -->
-<script src="{% static 'adminpanel/js/jquery.uploadify-3.1.min.js' %}"></script>
-<!-- history.js for cross-browser state change on ajax -->
-<script src="{% static 'adminpanel/js/jquery.history.js' %}"></script>
-<!-- application script for Charisma demo -->
-<script src="{% static 'adminpanel/js/charisma.js' %}"></script>
-
 
 </body>
 </html>
