--- a/admin_panel/templates/orders.html
+++ b/admin_panel/templates/orders.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -7,30 +7,24 @@
         EasyBot
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
     <!-- The styles -->
     <link id="bs-css" href="{% static 'adminpanel/css/bootstrap-cerulean.min.css' %}" rel="stylesheet">
 
     <link href="{% static 'adminpanel/css/charisma-app.css' %}" rel="stylesheet">
     <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet'
-          media='print'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
     <link href="{% static 'adminpanel/bower_components/chosen/chosen.min.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %}"
-          rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/jquery.noty.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/noty_theme_default.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/elfinder.min.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/elfinder.theme.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/jquery.iphone.toggle.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/uploadify.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet" >
 
     <!-- jQuery -->
     <script src="{% static 'adminpanel/bower_components/jquery/jquery.min.js' %}"></script>
@@ -42,7 +36,7 @@
 
     <!-- The fav icon -->
     <link rel="shortcut icon" href="{% static 'adminpanel/img/favicon.ico' %}">
-    <style>
+  <style>
         @font-face {
         font-family: "Iranian Sans";
         src: url({% static 'adminpanel/fonts/iraniansans.ttf' %});
@@ -57,43 +51,46 @@
 </head>
 
 <body>
-<!-- topbar starts -->
 <div class="navbar navbar-default" role="navigation">
 
     <div class="navbar-inner">
-        <button type="button" class="navbar-toggle pull-left animated flip">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
-            <span>EasyBot</span></a>
+        <a style="font-family: 'Iranian Sans'" class="navbar-brand" href="index.html">بات گرام</a>
 
-        <!-- user dropdown starts -->
-        <!-- navbar buttons starts -->
         <div class="btn-group pull-right" role="group">
-            <button type="button" class="btn btn-default"> سفارشات</button>
-            <button type="button" class="btn btn-default"> نظرات</button>
-            <button type="button" class="btn btn-default"> دسته بندی ها</button>
-            <button type="button" class="btn btn-default"> انتقادات پیشنهادات</button>
-            <button type="button" class="btn btn-primary"> مشاهده کردن</button>
-            <button type="button" class="btn btn-default">افزودن</button>
-            <button type="button" class="btn btn-default"> صفحه اصلی</button>
+            <button type="button" class="btn btn-default"><a href="codes.html"> کد تخفیف</a></button>
+            <button type="button" class="btn btn-default"><a href="advertise.html"> تبلیغات</a></button>
+            <button type="button" class="btn btn-default"><a href="show_survey.html"> نظرسنجی</a></button>
+            <button type="button" class="btn btn-default"><a href="orders.html">سفارشات</a></button>
+            <button type="button" class="btn btn-default"><a href="comments.html"> نظرات</a></button>
+            <button type="button" class="btn btn-default"><a href="category.html"> دسته بندی ها</a></button>
+            <button type="button" class="btn btn-default"><a href="enteghadat.html"> انتقادات پیشنهادات</a></button>
+            <button type="button" class="btn btn-default"><a href="showing.html"> مشاهده کردن</a></button>
+
+            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                افزودن
+            </button>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
+                <li class="dropdown-item" href="adding.html" style="padding-left: 30%"><a href="adding.html">افزودن محصول</a></li>
+                <li class="dropdown-item" href="add_cat.html" style="padding-left: 20%"><a href="add_cat.html">افزودن دسته بندی</a></li>
+                <li class="dropdown-item" href="add_feed_cat" style="padding-left:45%"><a href="add_feed_cat.html">افزودن نظر</a></li>
+                <li class="dropdown-item" href="survey.html" style="padding-left:24%"><a href="survey.html">افزودن نظرسنجی</a></li>
+                <li class="dropdown-item" href="add_ad.html" style="padding-left:30%"><a href="add_ad.html">افزودن تبلیغات</a></li>
+                <li class="dropdown-item" href="add_code.html" style="padding-left:22%"><a href="add_code.html">افزودن کد تخفیف</a></li>
+
+
+                </ul>
+
+
+            </div>
+
+
         </div>
-
-        <ul class="collapse navbar-collapse nav navbar-nav  top-menu">
-            <li>
-                <form class="navbar-search pull-left">
-                    <input style="text-align: right" placeholder="جستجو" class="search-query form-control col-md-10"
-                           name="query"
-                           type="text">
-                </form>
-            </li>
-        </ul>
-
     </div>
-</div>
+
+
+
 <div class="container-fluid">
     <div class="row">
         <div class="box col-md-12 col-sm-3 ">
@@ -361,5 +358,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <!-- external javascript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+
 </body>
 </html>
