--- a/admin_panel/templates/feedCat.html
+++ b/admin_panel/templates/feedCat.html
@@ -51,43 +51,7 @@
 </head>
 
 <body>
-<div class="navbar navbar-default" role="navigation">
-
-    <div class="navbar-inner">
-        <a style="font-family: 'Iranian Sans'" class="navbar-brand" href="index.html">بات گرام</a>
-
-        <div class="btn-group pull-right" role="group">
-            <button type="button" class="btn btn-default"><a href="codes.html"> کد تخفیف</a></button>
-            <button type="button" class="btn btn-default"><a href="advertise.html"> تبلیغات</a></button>
-            <button type="button" class="btn btn-default"><a href="show_survey.html"> نظرسنجی</a></button>
-            <button type="button" class="btn btn-default"><a href="orders.html">سفارشات</a></button>
-            <button type="button" class="btn btn-default"><a href="comments.html"> نظرات</a></button>
-            <button type="button" class="btn btn-default"><a href="category.html"> دسته بندی ها</a></button>
-            <button type="button" class="btn btn-default"><a href="enteghadat.html"> انتقادات پیشنهادات</a></button>
-            <button type="button" class="btn btn-default"><a href="showing.html"> مشاهده کردن</a></button>
-
-            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                افزودن
-            </button>
-
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
-                <li class="dropdown-item" href="adding.html" style="padding-left: 30%"><a href="adding.html">افزودن محصول</a></li>
-                <li class="dropdown-item" href="add_cat.html" style="padding-left: 20%"><a href="add_cat.html">افزودن دسته بندی</a></li>
-                <li class="dropdown-item" href="add_feed_cat" style="padding-left:45%"><a href="add_feed_cat.html">افزودن نظر</a></li>
-                <li class="dropdown-item" href="survey.html" style="padding-left:24%"><a href="survey.html">افزودن نظرسنجی</a></li>
-                <li class="dropdown-item" href="add_ad.html" style="padding-left:30%"><a href="add_ad.html">افزودن تبلیغات</a></li>
-                <li class="dropdown-item" href="add_code.html" style="padding-left:22%"><a href="add_code.html">افزودن کد تخفیف</a></li>
-
-
-                </ul>
-
-
-            </div>
-
-
-        </div>
-    </div>
+{% include "header.html" %}
 
 
 
