--- a/admin_panel/templates/comments.html
+++ b/admin_panel/templates/comments.html
@@ -1,178 +1,64 @@
-{% load static %}
-
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>
-        EasyBot
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
-    <!-- The styles -->
-    <link id="bs-css" href="{% static 'adminpanel/css/bootstrap-cerulean.min.css' %}" rel="stylesheet">
-
-    <link href="{% static 'adminpanel/css/charisma-app.css' %}" rel="stylesheet">
-    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
-    <link href="{% static 'adminpanel/bower_components/chosen/chosen.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/jquery.noty.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/noty_theme_default.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/elfinder.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/elfinder.theme.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/jquery.iphone.toggle.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/uploadify.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet" >
-
-    <!-- jQuery -->
-    <script src="{% static 'adminpanel/bower_components/jquery/jquery.min.js' %}"></script>
-
-    <!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- The fav icon -->
-    <link rel="shortcut icon" href="{% static 'adminpanel/img/favicon.ico' %}">
-  <style>
-        @font-face {
-        font-family: "Iranian Sans";
-        src: url({% static 'adminpanel/fonts/iraniansans.ttf' %});
-        }
-        body{
-        font-family: "Iranian Sans";
-        }
-        h2, h5{
-        font-family: "Iranian Sans";
-        }
-    </style>
-</head>
-
 <body>
-<div class="navbar navbar-default" role="navigation">
+{% include "header.html" %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 col-sm-3 ">
+            <h2 style="float:right">نظرات در یک نگاه</h2>
+            <div class="box-content">
+                <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
+                    <thead>
+                    <tr>
+                        <th style="text-align: right"> تغییرات</th>
+                        <th style="text-align: right"> آیدی خریدار</th>
+                        <th style="text-align: right"> کد محصول</th>
+                        <th style="text-align: right"> نظر</th>
 
-    <div class="navbar-inner">
-        <a style="font-family: 'Iranian Sans'" class="navbar-brand" href="index.html">بات گرام</a>
-
-        <div class="btn-group pull-right" role="group">
-            <button type="button" class="btn btn-default"><a href="/admin-panel/codes.html"> کد تخفیف</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/advertise.html"> تبلیغات</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/show_survey.html"> نظرسنجی</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/orders.html">سفارشات</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/comments.html"> نظرات</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/category.html"> دسته بندی ها</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/enteghadat.html"> انتقادات پیشنهادات</a></button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/showing.html"> مشاهده کردن</a></button>
-
-            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                افزودن
-            </button>
-
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
-                <li class="dropdown-item" href="adding.html" style="padding-left: 30%"><a href="/admin-panel/adding.html">افزودن محصول</a></li>
-                <li class="dropdown-item" href="add_cat.html" style="padding-left: 20%"><a href="/admin-panel/add_cat.html">افزودن دسته بندی</a></li>
-                <li class="dropdown-item" href="add_feed_cat" style="padding-left:45%"><a href="/admin-panel/add_feed_cat.html">افزودن نظر</a></li>
-                <li class="dropdown-item" href="survey.html" style="padding-left:24%"><a href="/admin-panel/survey.html">افزودن نظرسنجی</a></li>
-                <li class="dropdown-item" href="add_ad.html" style="padding-left:30%"><a href="/admin-panel/add_ad.html">افزودن تبلیغات</a></li>
-                <li class="dropdown-item" href="add_code.html" style="padding-left:22%"><a href="/admin-panel/add_code.html">افزودن کد تخفیف</a></li>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
 
 
-                </ul>
+                        {% for comment in p_comment %}
 
+                            <td style="text-align: right;" class="center ">
+                                <div class="btn-group" role="group">
+
+                                    <a href="/admin-panel/deletecomment?cm_id={{ comment.0 }}">
+                                        <button type="button" class="btn btn-danger btn-sm" style="float: right">
+
+                                            <i class="glyphicon glyphicon-trash icon-white"></i>
+                                            حذف
+
+                                        </button>
+                                    </a>
+                                </div>
+
+                            </td>
+                            <td style="text-align: right;direction: rtl;"> {{ comment.1 }}</td>
+                            <td style="text-align: right;direction: rtl;"> {{ comment.2 }}</td>
+                            <td style="text-align: right;direction: rtl;"> {{ comment.3 }}</td>
+
+
+
+
+                            </tr>
+                        {% endfor %}
+
+                    </tbody>
+
+                </table>
 
             </div>
 
 
         </div>
     </div>
-
-
-
-    <!-- topbar ends -->
-<div class="container-fluid">
-<div class="row">
-<div class="box col-md-12 col-sm-3 ">
-<div class="box-inner">
-    <div class="box-header well" data-original-title="">
-        <h2 style="float:right">نظرات در یک نگاه</h2>
-        <div class="box-icon" style="float: left">
-            <a href="#" class="btn btn-minimize btn-round btn-default"><i
-                    class="glyphicon glyphicon-chevron-up"></i></a>
-            <a href="#" class="btn btn-close btn-round btn-default"><i class="glyphicon glyphicon-remove"></i></a>
-    </div>
-    </div>
-    <div class="box-content">
-    <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
-        <thead>
-        <tr>
-            <th style="text-align: right"> تغییرات</th>
-            <th style="text-align: right"> آیدی خریدار</th>
-            <th style="text-align: right"> کد محصول</th>
-            <th style="text-align: right"> نظر</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-
-
-        {% for comment in p_comment %}
-
-            <td style="text-align: right;" class="center ">
-                <div class="btn-group" role="group">
-
-                    <a href="/admin-panel/deletecomment?cm_id={{comment.0}}">
-                        <button type="button" class="btn btn-danger btn-sm" style="float: right">
-
-                            <i class="glyphicon glyphicon-trash icon-white"></i>
-                            حذف
-
-                    </button>
-                    </a>
-                </div>
-
-            </td>
-                <td style="text-align: right;direction: rtl;"> {{comment.1}}</td>
-                <td style="text-align: right;direction: rtl;"> {{comment.2}}</td>
-                <td style="text-align: right;direction: rtl;"> {{comment.3}}</td>
-
-
-
-
-        </tr>
-{% endfor %}
-
-        </tbody>
-
-    </table>
-
-    </div>
-
-
-</div>
-</div>
-</div>
 </div>
 
 
-
-<footer class="row">
-        <p style="text-align: center" class="col-md-offset-3 col-sm-offset-3col-md-6 col-sm-6 col-xs-12 copyright">&copy; <a href="#" target="_blank">طراحی شده توسط تیم بات گرام</a></p>
-    </footer>
-
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-<!-- external javascript -->
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
-<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
-
-
+{% include "footer.html" %}
 </body>
 </html>
 
