--- a/admin_panel/templates/header.html
+++ b/admin_panel/templates/header.html
@@ -24,6 +24,14 @@
         h2, h5 {
             font-family: "Iranian Sans";
         }
+        .form-group{
+            margin-top: 5%;
+        }
+        .card{
+            background-color: #f8f8f8;
+            border-radius: 7px;
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        }
     </style>
 </head>
 <body>
