--- a/admin_panel/templates/survey.html
+++ b/admin_panel/templates/survey.html
@@ -1,116 +1,49 @@
 {% load static %}
 
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>
-        EasyBot
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
-    <!-- The styles -->
-    <link id="bs-css" href="{% static 'adminpanel/css/bootstrap-cerulean.min.css' %}" rel="stylesheet">
-
-    <link href="{% static 'adminpanel/css/charisma-app.css' %}" rel="stylesheet">
-    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
-    <link href="{% static 'adminpanel/bower_components/chosen/chosen.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/jquery.noty.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/noty_theme_default.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/elfinder.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/elfinder.theme.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/jquery.iphone.toggle.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/uploadify.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet" >
-
-    <!-- jQuery -->
-    <script src="{% static 'adminpanel/bower_components/jquery/jquery.min.js' %}"></script>
-
-    <!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- The fav icon -->
-    <link rel="shortcut icon" href="{% static 'adminpanel/img/favicon.ico' %}">
-  <style>
-        @font-face {
-        font-family: "Iranian Sans";
-        src: url({% static 'adminpanel/fonts/iraniansans.ttf' %});
-        }
-        body{
-        font-family: "Iranian Sans";
-        }
-        h2, h5{
-        font-family: "Iranian Sans";
-        }
-    </style>
-</head>
-
 <body>
 {% include "header.html" %}
+<div class="container">
+    <div class="card col-md-12">
+        <h2 style="text-align: right;"> نظرسنجی</h2>
+        <form role="form" action="/admin-panel/survey" id="add_survey" method="post"
+              name="add_survey_form">
+            <fieldset>
 
-
-
-
-<div class="box-content">
-
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="container-fluid">
-                <div class="box   col-md-12">
-                    <div class="box-inner">
-                        <div class="box-header well" data-original-title="">
-                            <h2 style="float: right"> نظرسنجی</h2>
+                <div class="input_fields_wrap">
+                    <div class="form-group">
+                        <h6 style="text-align: right;font-family: 'Iranian Sans'">موضوع نظرسنجی </h6>
+                        <input class="form-control"
+                               style="font-family: 'Iranian Sans';border-radius: 10px;text-align: right"
+                               type="text" name="survey_title"
+                               placeholder="موضوع نظرسنجی">
+                    </div>
+                    <div class="form-group">
+                        <h6 style="text-align: right;font-family: 'Iranian Sans'">سوال</h6>
+                        <div class="col-md-10 pull-right">
+                            <input class="form-control"
+                                   style="font-family: 'Iranian Sans';border-radius: 10px;text-align: right"
+                                   type="text" name="questions[]" placeholder="سوال">
                         </div>
-                        <div class="box-content" style="margin-left: 85%">
-                            <form role="form" action="/admin-panel/survey" id="add_survey" method="post"
-                                  name="add_survey_form">
-                                <fieldset>
-                                    <h6 style="text-align: right;font-family: 'Iranian Sans'">موضوع نظرسنجی </h6>
-                                    <div class="input_fields_wrap">
-                                        <div style="padding-top: 3%">
-                                            <input class="form-control"
-                                                   style="font-family: 'Iranian Sans';border-radius: 10px;text-align: right"
-                                                   type="text" name="survey_title"
-                                                   placeholder="موضوع نظرسنجی">
-                                        </div>
-                                        <h6 style="text-align: right;font-family: 'Iranian Sans'">سوال</h6>
-                                        <div class="row" style="padding-top: 3%;margin-top: -4%">
-                                            <div class="col-md-10 pull-right">
-                                                <input class="form-control" style="font-family: 'Iranian Sans';border-radius: 10px;text-align: right" type="text" name="questions[]" placeholder="سوال">
-                                            </div>
-                                            <div style="padding-right: 0;padding-top: 7px;" class="col-md-2">
-                                                <a style="font-family: 'Iranian Sans';text-decoration: none;float: right;کtext-align:right;color: black;font-size: smaller;padding-top: 2%" href="#" class="add_field_button">
-                                                    <i style="font-size: 200%;" class="glyphicon glyphicon-plus"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-
-                                    </div>
-
-                                </fieldset>
-                                <button style="margin-left: 70% ; width: 30% ; font-size: medium;margin-top: 5%"
-                                        type="submit"
-                                        class="btn btn-primary btn-round">تایید
-                                </button>
-                            </form>
+                        <div style="padding-right: 0;padding-top: 7px;" class="col-md-2">
+                            <a style="font-family: 'Iranian Sans';text-decoration: none;float: right;کtext-align:right;color: black;font-size: smaller;padding-top: 2%"
+                               href="#" class="add_field_button">
+                                <i style="font-size: 200%;" class="glyphicon glyphicon-plus"></i>
+                            </a>
                         </div>
                     </div>
+
                 </div>
-            </div>
-        </div>
+
+            </fieldset>
+            <button style="margin-left: 70% ; width: 30% ; font-size: medium;margin-top: 5%"
+                    type="submit"
+                    class="btn btn-primary btn-round">تایید
+            </button>
+        </form>
     </div>
 </div>
-
-<footer class="row">
-    <p style="text-align: center" class="col-md-offset-3 col-sm-offset-3col-md-6 col-sm-6 col-xs-12 copyright">&copy; <a
-            href="#" target="_blank">طراحی شده توسط تیم بات گرام</a></p>
-</footer>
+{% include "footer.html" %}
 <script>
     $(document).ready(function () {
         var max_fields = 10; //maximum input boxes allowed
@@ -137,16 +70,6 @@
         })
     });
 </script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
-<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
-
-
-
-
-
-
 </body>
 </html>
 
