Feedback manager and Product manager add , show_product add in Ui

--- a/admin_panel/templates/header.html
+++ b/admin_panel/templates/header.html
@@ -32,6 +32,10 @@
             border-radius: 7px;
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         }
+        #product_description{
+            text-align: right;
+            direction: rtl;
+        }
     </style>
 </head>
 <body>
@@ -50,24 +54,24 @@
             </button>
             <button type="button" class="btn btn-default"><a href="/admin-panel/enteghadat.html"> انتقادات پیشنهادات</a>
             </button>
-            <button type="button" class="btn btn-default"><a href="/admin-panel/showing.html"> مشاهده کردن</a></button>
+            <button type="button" class="btn btn-default"><a href="/admin-panel/show_products.html"> مشاهده کردن</a></button>
 
             <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
  <span class="caret"></span>               افزودن
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
-                <li class="dropdown-item" href="adding.html" style="padding-left: 30%"><a
-                        href="/admin-panel/adding.html">افزودن محصول</a></li>
-                <li class="dropdown-item" href="add_cat.html" style="padding-left: 20%"><a
+                <li class="dropdown-item" style="padding-left: 30%"><a
+                        href="/admin-panel/add_product.html">افزودن محصول</a></li>
+                <li class="dropdown-item" style="padding-left: 20%"><a
                         href="/admin-panel/add_cat.html">افزودن دسته بندی</a></li>
-                <li class="dropdown-item" href="add_feed_cat" style="padding-left:45%"><a
+                <li class="dropdown-item" style="padding-left:45%"><a
                         href="/admin-panel/add_feed_cat.html">افزودن نظر</a></li>
-                <li class="dropdown-item" href="survey.html" style="padding-left:24%"><a
+                <li class="dropdown-item" style="padding-left:24%"><a
                         href="/admin-panel/survey.html">افزودن نظرسنجی</a></li>
-                <li class="dropdown-item" href="add_ad.html" style="padding-left:30%"><a
+                <li class="dropdown-item" style="padding-left:30%"><a
                         href="/admin-panel/add_ad.html">افزودن تبلیغات</a></li>
-                <li class="dropdown-item" href="add_code.html" style="padding-left:22%"><a
+                <li class="dropdown-item" style="padding-left:22%"><a
                         href="/admin-panel/add_code.html">افزودن کد تخفیف</a></li>
 
 
