--- a/admin_panel/templates/add_product.html
+++ b/admin_panel/templates/add_product.html
@@ -26,7 +26,7 @@
 
                         <div class="card col-md-offset-7 col-md-7">
                             <h2 style="text-align: right"> افزودن</h2>
-                            <form role="form" action="/admin-panel/adding" id="adding" method="post"
+                            <form role="form" action="/admin-panel/add_product" id="adding" method="post"
                                   name="adding_form" enctype="multipart/form-data">
 
                                 <div class="form-group " style="text-align: right;margin-top: 5%">
